# chat_real_time

./: .gitignore  main.py  pyproject.toml
backend/: model.py  pyproject.toml  server.py
backend/core/: db.py
backend/utils/: settings.py
