[project]
name = "chat-real-time"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "websocket>=0.2.1",
]

[tool.ruff]
line-length = 150
exclude = [
    "migrations",
    "alembic",  # caso esteja em uma pasta com esse nome
    ".venv",
    "__pycache__",
    "build",
    "dist"
]

[tool.ruff.lint.pycodestyle]
max-line-length = 150

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "D",   # pydocstyle
]

# Removido "UP" para evitar reescrita de código

ignore = [
    "E501",  # line length violations
    "W191",  # Ignore indentação com tabs
    "E111",  # Indentação não múltipla de 4
    "E114",  # Indentação não múltipla de 4 (comentários)
    "E116",  # Indentação inesperada
    "E117",  # Over-indented
    "D206",
    "D100",
    "D212",
    "D104",
    "D101",
    "D200",
    "D107",
    "B904",
    "D202",
    "D205",
    "D415",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
preview = true
quote-style = "double"
indent-style = "tab"
skip-magic-trailing-comma = true
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 60

[tool.ruff.lint.isort]
known-first-party = ["escritorio"]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401",  # Ignorar imports não usados
    "F403",  # Ignorar imports globais
    "D",     # Ignorar erros de docs
    ]

